--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/gitlogo.png
+    - assets/f2.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
